@@ -66,6 +66,21 @@ public:
 	T& operator*() const {return *get();}
 };
 
+template <typename T> class unique_ptr_with_ondestroy
+{
+private:
+	typedef std::unique_ptr<T> ptr_type;
+	ptr_type ptr;
+	void OnDestroy(void) { if (ptr)ptr->OnDestroy(); }
+public:
+	~unique_ptr_with_ondestroy() { OnDestroy(); }
+	T* get() const { return ptr.get(); }
+	T* operator->() const { return get(); }
+	T& operator*() const { return *get(); }
+	operator const void*() const { return reinterpret_cast<const void*>(static_cast<intptr_t>(ptr != nullptr)); }
+	unique_ptr_with_ondestroy& operator=(ptr_type&& value) noexcept { OnDestroy(); ptr = std::move(value); return *this; }
+};
+
 struct file_closer
 {
 	void operator()(FILE* Object) const
