@@ -70,7 +70,7 @@ private:
 	int  OpenDizFile(const string& DizFile, int YPos);
 	void DynamicUpdateKeyBar() const;
 
-	std::unique_ptr<DizViewer, viewer_deleter> DizView;
+	unique_ptr_with_ondestroy<DizViewer> DizView;
 	bool OldWrapMode;
 	bool OldWrapType;
 	string strDizFileName;
